--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom border-2">
   <div class="container">
     <a class="navbar-brand" routerLink="/"
-      ><img class="me-1 img-fluid logo-image" src="/assets/img/ti_logo_mini.png" /><span>Tech.Interview</span></a
+      ><img
+        class="me-1 img-fluid logo-image"
+        src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cat_logo.png" />
+        <span>Tech.Interview</span></a
     >
     <button
       class="navbar-toggler"
