--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -6,31 +6,34 @@
       <div class="fs-4">
         <div class="fw-light">Автор:</div>
         <div>
-          <a class="text-reset" href="https://mgorbatyuk.dev" target="_blank">Максим Горбатюк</a>
+          <a class="text-reset link-without-underline" href="https://mgorbatyuk.dev" target="_blank">Максим Горбатюк</a>
         </div>
       </div>
 
       <div class="mb-3 mt-5">
         <div class="mb-1 h5">Контрибьюторы</div>
         <div>
-          <ul class="">
-            <li>
-              <a class="text-reset" href="https://github.com/indicozy" target="_blank">&#64;indicozy</a>
-            </li>
-            <li>
-              <a class="text-reset" href="https://github.com/sanch941" target="_blank">&#64;sanch941</a>
-            </li>
-            <li>
-              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">&#64;maximgorbatyuk</a>
-            </li>
-          </ul>
+          <a class="text-reset link-without-underline" href="https://github.com/indicozy" target="_blank">&#64;indicozy</a>
+        </div>
+        <div>
+          <a class="text-reset link-without-underline" href="https://github.com/sanch941" target="_blank">&#64;sanch941</a>
+        </div>
+        <div>
+          <a class="text-reset link-without-underline" href="https://github.com/maximgorbatyuk" target="_blank">&#64;maximgorbatyuk</a>
+        </div>
+      </div>
+
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">Иллюстрации</div>
+        <div>
+          <a class="text-reset link-without-underline" href="https://www.behance.net/just_juliette" target="_blank">Юлия Левданская</a>
         </div>
       </div>
 
       <div class="mb-3 mt-5">
         <div class="mb-1 h5">СМИ о нас</div>
         <div>
-          <a class="text-reset" href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/" target="_blank">
+          <a class="text-reset link-without-underline" href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/" target="_blank">
             Алматинец создал сервис для сбора информации о зарплатах казахстанских айтишников
           </a>, Digital Business, 13 марта 2024
         </div>
@@ -45,7 +48,14 @@
           Мне захотелось автоматизировать процесс, и так и родился сервис Tech.Interview. Я разработал его в первую очередь для себя, но в профессиональных чатах поделился ссылкой и предложил использовать всем желающим.
           К сожалению, особой популярности у платформы не было. Через какое-то время я и сам перестал активно проводить собеседования, но оставил портал и продолжил платить за домен.
         </div>
-        <div class="mt-2">В 2024 году решил создать сервис по сбору статистики по зарплатам, и самым простым решением было разработать его на базе уже существующей платформы.</div>
+        <div class="mt-2">
+          В 2024 году решил создать сервис по сбору статистики по зарплатам, и самым простым решением было разработать его на базе уже существующей платформы.
+          Всегда интересовало, сколько получают коллеги в команде и какие зарплаты предлагают другие компании. Но напрямую ведь не спросишь ни у кого, какая у него зарплата.
+          Сервисы по статистике - не новинка: есть <a target="_blank" class="text-reset link-without-underline" href="https://career.habr.com/salaries">Habr.Карьера</a>, <a target="_blank" class="text-reset link-without-underline" href="https://djinni.co/salaries">Djinni.co</a> и <a target="_blank" class="text-reset link-without-underline" href="https://www.glassdoor.com/Salaries/index.htm">Glassdor</a>.
+          Можно было ориентироваться на эти цифры. 
+          Тем не менее, подобного сервиса для казахстанских айтишников не было. Пару раз команда Kolesa group публиковали свои исследования Kolesa zerttey,
+          однако это были временные кампании по сбору анкет. Хотелось видеть актуальные зарплаты, и я решил создать такой сервис.
+        </div>
       </div>
 
       <hr class="mt-5" />
@@ -55,7 +65,9 @@
       </div>
       <div class="mt-1">
         <span><i class="bi bi-github"></i></span>
-        <span class="ms-3"><a class="text-reset" href="https://github.com/orgs/Techinterview-space/repositories" target="_blank">Github репозитории</a></span>
+        <span class="ms-3">
+          <a class="text-reset link-without-underline" href="https://github.com/orgs/Techinterview-space/repositories" target="_blank">Github репозитории</a>
+        </span>
       <div class="mt-1">
         <span><i class="bi bi-envelope"></i></span>
         <span class="ms-3">ake111aa&#64;yandex.ru</span>
