--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -51,11 +51,47 @@
         <div class="mt-2">
           В 2024 году решил создать сервис по сбору статистики по зарплатам, и самым простым решением было разработать его на базе уже существующей платформы.
           Всегда интересовало, сколько получают коллеги в команде и какие зарплаты предлагают другие компании. Но напрямую ведь не спросишь ни у кого, какая у него зарплата.
-          Сервисы по статистике - не новинка: есть <a target="_blank" class="text-reset link-without-underline" href="https://career.habr.com/salaries">Habr.Карьера</a>, <a target="_blank" class="text-reset link-without-underline" href="https://djinni.co/salaries">Djinni.co</a> и <a target="_blank" class="text-reset link-without-underline" href="https://www.glassdoor.com/Salaries/index.htm">Glassdor</a>.
-          Можно было ориентироваться на эти цифры. 
-          Тем не менее, подобного сервиса для казахстанских айтишников не было. Пару раз команда Kolesa group публиковали свои исследования Kolesa zerttey,
+          Сервисы по статистике - не новинка: есть <a target="_blank" class="text-reset" href="https://career.habr.com/salaries">Habr.Карьера</a>, <a target="_blank" class="text-reset" href="https://djinni.co/salaries">Djinni.co</a> и <a target="_blank" class="text-reset" href="https://www.glassdoor.com/Salaries/index.htm">Glassdor</a>.
+          Можно было ориентироваться на эти цифры.
+        </div>
+        <div class="mt-2">
+          Тем не менее, подобного сервиса для казахстанских айтишников не было. Пару раз команда Kolesa group публиковали свои исследования <a target="_blank" class="text-reset" href="https://zerttey.kolesa.group">Kolesa zerttey</a>,
           однако это были временные кампании по сбору анкет. Хотелось видеть актуальные зарплаты, и я решил создать такой сервис.
         </div>
+      </div>
+
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">Солидному проекту - свой маскот</div>
+        <div class="mt-2">
+          <div class="mb-2">
+            Так как проект был разработан еще в 2021 году, тогда же я взял стоковую векторную картинку просто такую, чтоб была. 
+            Невычурную, аккуратную. Сойдет.
+          </div>
+          <div class="mb-2">
+            С января 2024го года я добавил новый модуль - зарплаты. Теперь единственная картинка не отражает суть проекта, да и мало кто пользуется разделом заметок. 
+            Решил, что нужно искать новые картинки на сайт, а может даже и завести маскота проекта. Что ж, раз решил, значит нужно претворять в жизнь.
+          </div>
+          <div class="mb-2">
+            Встречайте нового маскота techinterview - кота Магеллан. 
+            Магеллан любит писать заметки, смотреть всякие графики, но больше всего - считать деньги. 
+            Все мы - немного Магеллан. Маскотом и его спутницей стали кошки моих друзей Рахимжана и Полины: кот Магеллан и кошка Векси. 
+            Как они радуют меня, когда я прихожу к друзьям в гости, так пусть они радуют и развлекают и посетителей сайта
+          </div>
+          <div class="mb-2">
+            Шикарные рисунки были подготовлены <a target="_blank" href="https://www.behance.net/just_juliette" class="text-reset">прекрасным иллюстратором</a> Юлией Левданской. 
+            Работа прошла профессионально и легко, и я очень рад, что Юлия согласилась на сотрудничество.
+          </div>
+        </div>
+          
+      </div>
+
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">Технологии</div>
+        <div class="mt-2">
+          <div>Frontend: Angular</div>
+          <div>Backend: .NET</div>
+          <div>База данных: PostgreSQL</div>
+          <div>Хостинг: DigitalOcean</div>
       </div>
 
       <hr class="mt-5" />
