--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -77,6 +77,34 @@
             Все мы - немного Магеллан. Маскотом и его спутницей стали кошки моих друзей Рахимжана и Полины: кот Магеллан и кошка Векси. 
             Как они радуют меня, когда я прихожу к друзьям в гости, так пусть они радуют и развлекают и посетителей сайта
           </div>
+          <div class="mb-2 row">
+            <div class="col-md-4 px-5 py-2">
+              <div>
+                <img
+                  src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/vexi_magellain.jpg"
+                  class="img-fluid rounded" alt="Magellain and Vexi">
+              </div>
+              <div class="text-muted small">Магеллан и Векси вместе</div>
+            </div>
+            <div class="col-md-4 px-5 py-2">
+              <div>
+                <img
+                  src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/magellain.jpg"
+                  class="img-fluid rounded" alt="Magellain">
+              </div>
+              <div class="text-muted small">Магеллан позирует для фото</div>
+            </div>
+
+            <div class="col-md-4 px-5 py-2">
+              <div>
+                <img
+                  src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cats/vexi.jpg"
+                  class="img-fluid rounded" alt="Vexi">
+              </div>
+              <div class="text-muted small">Векси делает вид, что не фоткается</div>
+            </div>
+
+          </div>
           <div class="mb-2">
             Шикарные рисунки были подготовлены <a target="_blank" href="https://www.behance.net/just_juliette" class="text-reset">прекрасным иллюстратором</a> Юлией Левданской. 
             Работа прошла профессионально и легко, и я очень рад, что Юлия согласилась на сотрудничество.
