--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -72,7 +72,9 @@
             Решил, что нужно искать новые картинки на сайт, а может даже и завести маскота проекта. Что ж, раз решил, значит нужно претворять в жизнь.
           </div>
           <div class="mb-2">
-            Встречайте нового маскота techinterview - кота Магеллан. 
+            С весны у проекта теперь будет свой маскот - кот Магеллан. 
+          </div>
+          <div class="mb-2">
             Магеллан любит писать заметки, смотреть всякие графики, но больше всего - считать деньги. 
             Все мы - немного Магеллан. Маскотом и его спутницей стали кошки моих друзей Рахимжана и Полины: кот Магеллан и кошка Векси. 
             Как они радуют меня, когда я прихожу к друзьям в гости, так пусть они радуют и развлекают и посетителей сайта
