--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       ><img
         class="me-1 img-fluid logo-image"
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cat_logo.png" />
-        <span>Tech.Interview</span></a
+        <span>Techinterview.space</span></a
     >
     <button
       class="navbar-toggler"
