--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -3,7 +3,8 @@
     <div class="col-sm-6 d-flex align-items-center">
       <div class="d-inline-block my-5">
         <div class="display-1">Tech.Interview</div>
-        <div class="lead">Зарплаты в IT и заметки к техническим интервью</div>
+        <div class="lead">Зарплаты в IT</div>
+        <div class="lead">Заметки к техническим интервью</div>
       </div>
     </div>
     <div class="col-sm-6">
@@ -22,12 +23,12 @@
       <div class="row">
 
         <div class="col-sm-6">
-          <div class="feature-title">Зарплаты в IT в Казахстане</div>
+          <div class="feature-title">Зарплаты в IT</div>
           <div class="mt-3 feature-subtitle">
-            Здесь мы собираем и анализируем данные по зарплатам в IT в РК.
+            Здесь мы собираем и анализируем данные по зарплатам в IT в Казахстане.
           </div>
           <div class="mt-1 feature-subtitle">
-            В 2024 году мы решили, что в Казахстане не хватает актуальной и публичной статистики по зарплатам в IT сфере. Мы решили это исправить.
+            В 2024 году мы решили, что не хватает актуальной и публичной статистики по зарплатам в IT сфере в казахстанских компаниях, и нужно это исправить.
           </div>
           <div class="feature-subtitle">
             Хочешь узнать, сколько попросить в следующий раз на собеседовании - посмотри в собранной статистике.
