--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -11,30 +11,35 @@
       <img
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
         alt="Interviewer"
-        class="img-fluid" />
+        class="img-fluid"
+      />
     </div>
   </div>
 </div>
 
 <div class="mt-5">
-
   <div class="feature bg-white">
     <div class="container">
       <div class="row">
-
         <div class="col-sm-6">
           <div class="feature-title">Зарплаты в IT</div>
           <div class="mt-3 feature-subtitle">
-            Здесь мы собираем и анализируем данные по зарплатам в IT в Казахстане.
+            Здесь мы собираем и анализируем данные по зарплатам в IT в
+            Казахстане.
           </div>
           <div class="mt-1 feature-subtitle">
-            В 2024 году мы решили, что не хватает актуальной и публичной статистики по зарплатам в IT сфере в казахстанских компаниях, и нужно это исправить.
+            В 2024 году мы решили, что не хватает актуальной и публичной
+            статистики по зарплатам в IT сфере в казахстанских компаниях, и
+            нужно это исправить.
           </div>
           <div class="feature-subtitle">
-            Хочешь узнать, сколько попросить в следующий раз на собеседовании - посмотри в собранной статистике.
+            Хочешь узнать, сколько попросить в следующий раз на собеседовании -
+            посмотри в собранной статистике.
           </div>
           <div class="mt-5">
-            <a routerLink="/salaries" class="btn btn-huge btn-primary">Перейти к зарплатам</a>
+            <a routerLink="/salaries" class="btn btn-huge btn-primary"
+              >Перейти к зарплатам</a
+            >
           </div>
         </div>
         <div class="col-sm-6">
@@ -44,22 +49,24 @@
             alt="Main"
           />
         </div>
-
       </div>
     </div>
   </div>
 
   <div class="feature">
     <div class="container">
-      
       <div class="row">
         <div class="col-sm-6">
           <div class="feature-title">Заметки к техническим интервью</div>
           <div class="mt-3 feature-subtitle">
-            Если ты проводишь технические собеседования и хочешь создать шаблон и сохранять фидбеки, чтобы потом делиться ими с коллегами - тебе сюда.
+            Если ты проводишь технические собеседования и хочешь создать шаблон
+            и сохранять фидбеки, чтобы потом делиться ими с коллегами - тебе
+            сюда.
           </div>
           <div class="mt-5">
-            <a routerLink="/interviews" class="btn btn-huge btn-outline-primary">Перейти к заметкам</a>
+            <a routerLink="/interviews" class="btn btn-huge btn-outline-primary"
+              >Перейти к заметкам</a
+            >
           </div>
         </div>
 
@@ -76,15 +83,34 @@
 
   <div class="feature bg-white">
     <div class="container">
-      <div class="feature-title">Наш проект - некоммерческий и в свободном доступе.</div>
+      <div class="feature-title">
+        Наш проект - некоммерческий и в свободном доступе.
+      </div>
       <div class="mt-1 feature-title">Так будет всегда.</div>
       <div class="mt-3 feature-subtitle">
-        Мы верим, что этот проект должен быть бесплатным для всех.
-        <br />
-        Мы открыли исходный код на <a href="https://github.com/orgs/Techinterview-space/repositories" class="text-reset" target="_blank"><i class="bi bi-github"></i> GitHub</a> и будем рады новым контрибьютерам.
+        Мы верим, что этот проект должен быть бесплатным для всех. Мы открыли
+        исходный код и будем рады новым контрибьютерам.
       </div>
-      <div class="mt-3 feature-subtitle">
-        Если вы хотите поддержать нас, то тут наш <a href="https://boosty.to/ake111aa" class="text-reset" target="_blank"><i class="bi bi-cash-coin"></i> бусти</a>. Мы благодарны любой помощи.
+      <div class="mt-1 feature-subtitle">
+        Если вы хотите поддержать нас, то тут наш донатом на бусти. Мы
+        благодарны любой помощи.
+      </div>
+      <div class="mb-5 mt-3">
+        <a
+          href="https://github.com/orgs/Techinterview-space/repositories"
+          class="btn btn-lg btn-outline-dark"
+          target="_blank"
+        >
+          <i class="bi bi-github me-2"></i>Исходный код</a
+        >
+
+        <a
+          href="https://boosty.to/ake111aa"
+          class="ms-3 btn btn-lg btn-outline-dark"
+          target="_blank"
+        >
+          <i class="bi bi-cash-coin me-2"></i>Поддержать донатом</a
+        >
       </div>
     </div>
   </div>
