--- a/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
@@ -43,6 +43,25 @@
       </button>
     </div>
   </div>
+
+  <div *ngIf="tableRows" class="mt-2">
+    <table class="table table-hover table-sm">
+      <thead>
+        <tr>
+          <th scope="col">Навык</th>
+          <th scope="col">Кол-во анкет</th>
+          <th scope="col">Доля</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of tableRows" class="small">
+          <td>{{ item.title }}</td>
+          <td>{{ item.value }}</td>
+          <td>{{ item.part | number: "1.3" }}%</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <ng-template #hasSkillInSalary>
