Adjusted some charts

--- a/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
@@ -1,63 +1,60 @@
 <div class="">
-  <div class="h4 mb-3">Гендер респондента</div>
+  <div class="h4 mb-3">Гендер респондента в таблицах</div>
 
-  <div class="mb-3" *ngIf="barsForLocal.length > 0">
-    <div class="mb-3">
-      <span>Казахстанские компании:</span>
-      <span class="ms-2">{{ totalCountLocal }} анкет</span>
-    </div>
-    <div class="progress" (click)="toggleCountAndPercent()">
-      <div
-        *ngFor="let item of barsForLocal"
-        class="progress-bar progress-bar-striped {{ item.color }}"
-        role="progressbar"
-        [attr.aria-label]="item.label"
-        [ngStyle]="{ width: item.width + '%' }"
-        [attr.aria-label]="item.value"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      >
-        <strong
-          title="{{ item.label }} - {{ item.value }}"
-          class="{{ item.textColor }}"
-          >{{ item.value }}</strong
-        >
+  <div class="row">
+    <div class="col-md-6 mb-2" *ngIf="barsForLocal.length > 0">
+      <div class="h5 mb-2">Казахстан</div>
+      <div>
+        <table class="table table-hover table-sm">
+          <thead>
+            <tr>
+              <th scope="col">Гендер</th>
+              <th scope="col">Кол-во анкет</th>
+              <th scope="col">Доля</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of barsForLocal" class="small">
+              <td>{{ item.label }}</td>
+              <td>{{ item.value }}</td>
+              <td>{{ item.part | number: "1.3" }}%</td>
+            </tr>
+            <tr class="small">
+              <td class="text-muted">Всего</td>
+              <td>{{ totalCountLocal }}</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-  </div>
 
-  <div class="mb-3" *ngIf="barsForRemote.length > 0">
-    <div class="mb-3">
-      <span>Иностранные компании:</span>
-      <span class="ms-2">{{ totalCountRemote }} анкет</span>
-    </div>
-    <div class="progress" (click)="toggleCountAndPercent()">
-      <div
-        *ngFor="let item of barsForRemote"
-        class="progress-bar progress-bar-striped {{ item.color }}"
-        role="progressbar"
-        [attr.aria-label]="item.label"
-        [ngStyle]="{ width: item.width + '%' }"
-        [attr.aria-label]="item.value"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      >
-        <strong
-          title="{{ item.label }} - {{ item.value }}"
-          class="{{ item.textColor }}"
-          >{{ item.value }}</strong
-        >
+    <div class="col-md-6 mb-2" *ngIf="barsForRemote.length > 0">
+      <div class="h5 mb-2">Удаленка</div>
+      <div>
+        <table class="table table-hover table-sm">
+          <thead>
+            <tr>
+              <th scope="col">Гендер</th>
+              <th scope="col">Кол-во анкет</th>
+              <th scope="col">Доля</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of barsForRemote" class="small">
+              <td>{{ item.label }}</td>
+              <td>{{ item.value }}</td>
+              <td>{{ item.part | number: "1.3" }}%</td>
+            </tr>
+            <tr class="small">
+              <td class="text-muted">Всего</td>
+              <td>{{ totalCountRemote }}</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-  </div>
-
-  <div class="mb-2">
-    <span>Значения цветов</span>
-    <span
-      *ngFor="let item of colorByGradeLegend"
-      class="ms-2 badge {{ item.color }} {{ item.textColor }}"
-      >{{ item.title }}</span
-    >
   </div>
 
   <div
