--- a/src/app/modules/salaries/components/salaries-chart/salaries-by-grade/salaries-by-grade-block.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-by-grade/salaries-by-grade-block.component.html
@@ -15,6 +15,12 @@
         <td>{{ item.averageSalaryAsString }}</td>
         <td>{{ item.count }}</td>
       </tr>
+      <tr class="small">
+        <td class="text-muted" scope="row" colspan="3">
+          Всего анкет, где указан грейд
+        </td>
+        <td>{{ totalCount }}</td>
+      </tr>
     </tbody>
   </table>
 </div>
