--- a/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
@@ -59,6 +59,11 @@
           <td>{{ item.value }}</td>
           <td>{{ item.part | number: "1.3" }}%</td>
         </tr>
+        <tr class="small">
+          <td class="text-muted">Всего анкет с данными</td>
+          <td>{{ totalCount }}</td>
+          <td></td>
+        </tr>
       </tbody>
     </table>
   </div>
