+1 reference to support

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -105,11 +105,19 @@
         >
 
         <a
+          href="https://buymeacoffee.com/maximgorbatyuk"
+          class="ms-3 btn btn-lg btn-outline-dark"
+          target="_blank"
+        >
+          <i class="bi bi-cup-hot-fill me-2"></i>Buy me a coffee</a
+        >
+
+        <a
           href="https://boosty.to/ake111aa"
           class="ms-3 btn btn-lg btn-outline-dark"
           target="_blank"
         >
-          <i class="bi bi-cash-coin me-2"></i>Поддержать донатом</a
+          <i class="bi bi-cash-coin me-2"></i>Поддержать на boosty</a
         >
       </div>
     </div>
