--- a/src/app/modules/interviews/components/interview-edit-page/interview-edit-page.component.html
+++ b/src/app/modules/interviews/components/interview-edit-page/interview-edit-page.component.html
@@ -122,7 +122,7 @@
               formArrayName="subjects"
             >
               <li
-                class="list-group-item"
+                class="list-group-item pb-5"
                 *ngFor="
                   let child of formGroup.subjectsFormArray.controls;
                   let subjectIndex = index
