--- a/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
@@ -53,6 +53,7 @@
 
   <div class="">
     <span>Значения цветов</span>
+    <span class="ms-2 badge bg-light text-dark">Trainee</span>
     <span class="ms-2 badge bg-success">Junior</span>
     <span class="ms-2 badge bg-warning text-dark">Middle</span>
     <span class="ms-2 badge bg-info text-dark">Senior</span>
