--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -207,6 +207,12 @@
           >
         </div>
 
+        <div *ngIf="shouldShowSurveyBlock" class="mt-3 mb-5">
+          <app-salaries-survey-block
+            [sourceChart]="salariesChart"
+            ></app-salaries-survey-block>
+        </div>
+
         <div class="mb-5 display-4 chapter-title">
           <span>Зарплата, специализация и индустрия</span>
         </div>
@@ -325,6 +331,13 @@
             [professions]="professions"
           >
           </app-salaries-by-grades-chart>
+        </div>
+
+        <div *ngIf="shouldShowSurveyBlock" class="mt-3 mb-5">
+          <app-salaries-survey-block
+            [sourceChart]="salariesChart"
+            (closeButtonClick)="closeSurveyBlock()"
+            ></app-salaries-survey-block>
         </div>
 
         <div class="mt-3 mb-5">
