--- a/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
+++ b/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
@@ -4,7 +4,7 @@
   role="alert">
 
   <div *ngIf="showThankYouBlock">
-    <div class="mb-3 h3 alert-heading">
+    <div class="mb-3 h2 alert-heading">
       Спасибо за ваш отзыв!
     </div>
   </div>
@@ -26,7 +26,7 @@
           </div>
           <div
             *ngFor="let choice of formGroup.usefullnessReplyOptions; let i=index"
-            class="form-check radiobutton-group">
+            class="form-check">
             <input
                 class="form-check-input"
                 type="radio"
@@ -47,11 +47,11 @@
 
         <div class="mb-3">
           <div class="mb-1">
-            <b>Была ли статистика полезной для вас?</b>
+            <b>Зарплаты оказались такими, как вы предполагали?</b>
           </div>
           <div
             *ngFor="let choice of formGroup.expectationReplyOptions; let i=index"
-            class="form-check radiobutton-group">
+            class="form-check">
             <input
                 class="form-check-input"
                 type="radio"
