--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -98,7 +98,7 @@
       <div class="mb-5 mt-3">
         <a
           href="https://github.com/orgs/Techinterview-space/repositories"
-          class="btn btn-lg btn-outline-dark"
+          class="me-3 mb-2 btn btn-lg btn-outline-dark"
           target="_blank"
         >
           <i class="bi bi-github me-2"></i>Исходный код</a
@@ -106,7 +106,7 @@
 
         <a
           href="https://buymeacoffee.com/maximgorbatyuk"
-          class="ms-3 btn btn-lg btn-outline-dark"
+          class="me-3 mb-2 btn btn-lg btn-outline-dark"
           target="_blank"
         >
           <i class="bi bi-cup-hot-fill me-2"></i>Buy me a coffee</a
@@ -114,7 +114,7 @@
 
         <a
           href="https://boosty.to/ake111aa"
-          class="ms-3 btn btn-lg btn-outline-dark"
+          class="me-3 mb-2 btn btn-lg btn-outline-dark"
           target="_blank"
         >
           <i class="bi bi-cash-coin me-2"></i>Поддержать на boosty</a
