--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -31,3 +31,13 @@
 .bg-white {
   background-color: #fff;
 }
+
+.uwu-image {
+  max-width: 50%;
+  height: auto;
+}
+
+.uwu-title {
+  color: #130e38;
+  font-weight: bolder;
+}
