--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,20 +1,20 @@
 <div class="container">
-  <div class="row pt-5">
-    <div class="col-sm-6 d-flex align-items-center">
-      <div class="d-inline-block my-5">
-        <div class="display-1">Tech.Interview</div>
-        <div class="lead">Зарплаты в IT</div>
-        <div class="lead">Заметки к техническим интервью</div>
+
+  <div *ngIf="showUwu; else noUwu" class="pt-5">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <div class="mb-3 uwu-image">
+        <img
+          src="{{getUwuLink()}}"
+          alt="UwU"
+          class="img-fluid"
+        />
       </div>
-    </div>
-    <div class="col-sm-6">
-      <img
-        src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
-        alt="Interviewer"
-        class="img-fluid"
-      />
+      <div
+        class="display-1 uwu-title">Зарплаты в IT</div>
     </div>
   </div>
+
+  
 </div>
 
 <div class="mt-5">
@@ -123,3 +123,23 @@
     </div>
   </div>
 </div>
+
+<ng-template #noUwu>
+  <div class="row pt-5">
+
+    <div class="col-sm-6 d-flex align-items-center">
+      <div class="d-inline-block my-5">
+        <div class="display-1">Tech.Interview</div>
+        <div class="lead">Зарплаты в IT</div>
+        <div class="lead">Заметки к техническим интервью</div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <img
+        src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
+        alt="Interviewer"
+        class="img-fluid"
+      />
+    </div>
+  </div>
+</ng-template>
